--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -17,11 +17,22 @@ background-color:black  !important;
 }
 #home-container {
 	margin-top: 25px;
+
 }
 .jumbotron {
-  background-image: asset-url('jumbo-copy.jpg');
+  background-image: asset-url("jumbo-copy.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 425px;
+}
+html,
+body {
+  height: 100%;
+}
+#page-content {
+  flex: 1 0 auto;
+  background-color: lightgray;
+}
+#sticky-footer {
+  flex-shrink: none;
 }
