--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,32 @@
 <p style="color: green"><%= notice %></p>
+<div id="page-content">
 
-<h1>Articles</h1>
-
-<div id="articles">
+<h1 class="text-center mt-4">Articles</h1>
+  <div class="container">
   <% @articles.each do |article| %>
-    <%= render article %>
-    <p>
-      <%= link_to "Show this article", article %>
-    </p>
-  <% end %>
+  <div class="row justify-content-md-center">
+    <div class="col-8 mt-4">
+<div class="card text-center shadow mb-5 bg-white rounded">
+  <div class="card-header">
+    by Sandhya
+  </div>
+  <div class="card-body">
+    <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
+    <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+    <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
+    <%= link_to "Edit", article_path(article), class: "btn btn-outline-info" %>
+    <%= link_to "Delete", article_path(article), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+  </div>
+  <div class="card-footer text-muted">
+    <small>Created <%= time_ago_in_words(article.created_at) %> ago,
+    edited <%= time_ago_in_words(article.updated_at) %> ago </small>
+  </div>
+</div>
+</div>
+</div>
+<% end %>
+</div>
 </div>
 
-<%= link_to "New article", new_article_path %>
+
+
